finished notebook with agent setup and mock implementation usage

--- a/scripts/IS_agent/N01_agent_setup.ipynb
+++ b/scripts/IS_agent/N01_agent_setup.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,11 +243,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from experta import Fact, Field"
+    "from experta import Fact, Field, KnowledgeEngine"
    ]
   },
   {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,6 +417,257 @@
    "metadata": {},
    "source": [
     "## 3. Engine Definition with Rule Documentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class F1StrategyEngine(KnowledgeEngine):\n",
+    "    \"\"\"\n",
+    "    Formula 1 strategy expert system engine\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.rules_fired = []  # Tracking the rules that have been activated\n",
+    "    \n",
+    "    def get_recommendations(self):\n",
+    "        \"\"\"\n",
+    "        Retrieve all current recommendations, sorted by priority and confidence\n",
+    "        \"\"\"\n",
+    "\n",
+    "        recommendations = []\n",
+    "        for fact in self.facts.values():\n",
+    "            if isinstance(fact, StrategyRecommendation):\n",
+    "                recommendations.append(\n",
+    "                    {\n",
+    "                        \"action\": fact[\"action\"],\n",
+    "                        \"confidence\": fact[\"confidence\"],\n",
+    "                        \"explanation\": fact[\"explanation\"],\n",
+    "                        \"priority\": fact.get(\"priority\", 0),\n",
+    "                        \"lap_issued\" : fact[\"lap_issued\"]\n",
+    "                    }\n",
+    "                )\n",
+    "        return sorted(\n",
+    "            recommendations,\n",
+    "            key = lambda x: (x[\"priority\"], x[\"confidence\"]),\n",
+    "            reverse= True\n",
+    "        )\n",
+    "    \n",
+    "    def record_rule_fired(self, rule_name):\n",
+    "        \"\"\"\n",
+    "        Record when a rule is fired for explanation and debugging\n",
+    "        \"\"\"\n",
+    "\n",
+    "        current_lap = None\n",
+    "        for fact in self.facts.values():\n",
+    "            if isinstance(fact, RaceStatusFact):\n",
+    "                current_lap = fact.get(\"lap\")\n",
+    "                break\n",
+    "        \n",
+    "        self.rules_fired.append(\n",
+    "            {\n",
+    "                \"rule\": rule_name,\n",
+    "                \"lap\": current_lap,\n",
+    "                \"timestamp\": pd.Timestamp.now()\n",
+    "            }\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Data Transformation Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_degradation_prediction(prediction_data, driver_number):\n",
+    "    \"\"\"\n",
+    "    Transform degradation prediction model output into facts.\n",
+    "    \n",
+    "    Args:\n",
+    "        prediction_data (dict): Output from the degradation prediction model\n",
+    "        driver_number (int): The driver number to extract data for\n",
+    "        \n",
+    "    Returns:\n",
+    "        dict: Dictionary with facts to declare\n",
+    "    \"\"\"\n",
+    "    # Filter data for the specific driver\n",
+    "    driver_data = prediction_data[prediction_data['DriverNumber'] == driver_number].iloc[-1]\n",
+    "    \n",
+    "    # Extract relevant fields\n",
+    "    degradation_fact = DegradationFact(\n",
+    "        degradation_rate=float(driver_data['DegradationRate']),\n",
+    "        fuel_adjusted_deg_percent=float(driver_data.get('FuelAdjustedDegPercent', 0))\n",
+    "    )\n",
+    "    \n",
+    "    # Get historical rates if available (last 3 laps)\n",
+    "    if len(prediction_data[prediction_data['DriverNumber'] == driver_number]) >= 3:\n",
+    "        historical = prediction_data[prediction_data['DriverNumber'] == driver_number].tail(3)\n",
+    "        degradation_fact['previous_rates'] = historical['DegradationRate'].tolist()\n",
+    "    \n",
+    "    telemetry_fact = TelemetryFact(\n",
+    "        tire_age=int(driver_data['TyreAge']),           # Convert to int\n",
+    "        compound_id=int(driver_data['CompoundID']),     # Convert to int\n",
+    "        position=int(driver_data['Position']),          # Convert to int\n",
+    "        driver_number=int(driver_number)                # Convert to int\n",
+    "    )\n",
+    "    \n",
+    "    return {\n",
+    "        'degradation': degradation_fact,\n",
+    "        'telemetry': telemetry_fact\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_laptime_prediction(prediction_data, driver_number):\n",
+    "    \"\"\"\n",
+    "    Transform lap time prediction model output into facts.\n",
+    "    \n",
+    "    Args:\n",
+    "        prediction_data (dict): Output from the lap time prediction model\n",
+    "        driver_number (int): The driver number to extract data for\n",
+    "        \n",
+    "    Returns:\n",
+    "        dict: Dictionary with facts to declare\n",
+    "    \"\"\"\n",
+    "    # Filter data for the specific driver\n",
+    "    driver_data = prediction_data[prediction_data['DriverNumber'] == driver_number].iloc[-1]\n",
+    "    \n",
+    "    # Extract current and predicted lap times\n",
+    "    current_lap_time = driver_data['LapTime']\n",
+    "    predicted_lap_time = driver_data['PredictedLapTime']  # Assuming this field exists\n",
+    "    \n",
+    "    telemetry_fact = TelemetryFact(\n",
+    "        lap_time=current_lap_time,\n",
+    "        predicted_lap_time=predicted_lap_time,\n",
+    "        driver_number=driver_number\n",
+    "    )\n",
+    "    \n",
+    "    return {\n",
+    "        'telemetry': telemetry_fact\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_radio_analysis(radio_json):\n",
+    "    \"\"\"\n",
+    "    Transform NLP radio analysis into facts.\n",
+    "    \n",
+    "    Args:\n",
+    "        radio_json (dict): The output from radio NLP analysis\n",
+    "        \n",
+    "    Returns:\n",
+    "        RadioFact: Fact with radio analysis information\n",
+    "    \"\"\"\n",
+    "    analysis = radio_json['analysis']\n",
+    "    \n",
+    "    return RadioFact(\n",
+    "        sentiment=analysis['sentiment'],\n",
+    "        intent=analysis['intent'],\n",
+    "        entities=analysis['entities'],\n",
+    "        timestamp=pd.Timestamp.now().timestamp()\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_race_phase(current_lap, total_laps):\n",
+    "    \"\"\"Calculate the current phase of the race.\"\"\"\n",
+    "    percentage = (current_lap / total_laps) * 100\n",
+    "    if percentage < 25:\n",
+    "        return \"start\"\n",
+    "    elif percentage > 75:\n",
+    "        return \"end\"\n",
+    "    else:\n",
+    "        return \"mid\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Basic Engine Initialization Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Facts initialized successfully. Rules will be implemented in subsequent notebooks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an engine instance\n",
+    "\n",
+    "engine = F1StrategyEngine()\n",
+    "engine.reset()\n",
+    "\n",
+    "\n",
+    "# Example declaring some initial facts\n",
+    "\n",
+    "engine.declare(RaceStatusFact(lap = 1, total_laps = 60, race_phase = \"start\", track_status = \"clear\"))\n",
+    "\n",
+    "# Example of transforming model predictions into facts\n",
+    "# (These would come from our actual models in practice)\n",
+    "mock_degradation_data = pd.DataFrame({\n",
+    "    'DriverNumber': [44, 44],\n",
+    "    'DegradationRate': [0.05, 0.07],\n",
+    "    'FuelAdjustedDegPercent': [5.0, 7.0],\n",
+    "    'TyreAge': [3, 4],\n",
+    "    'CompoundID': [2, 2],  # Medium tire\n",
+    "    'Position': [1, 1]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "facts = transform_degradation_prediction(mock_degradation_data, 44)\n",
+    "engine.declare(facts['degradation'])\n",
+    "engine.declare(facts['telemetry'])\n",
+    "\n",
+    "print(\"Facts initialized successfully. Rules will be implemented in subsequent notebooks.\")"
    ]
   }
  ],
