updated outputs from some notebooks

--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -21,7 +21,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipped forward 10 seconds to frame 998\n",
+      "Skipped forward 10 seconds to frame 1556\n",
+      "Skipped forward 10 seconds to frame 2076\n",
+      "Skipped forward 10 seconds to frame 2608\n",
+      "Skipped forward 10 seconds to frame 3124\n",
+      "Skipped forward 10 seconds to frame 3663\n",
+      "Skipped forward 10 seconds to frame 4163\n",
+      "Skipped forward 10 seconds to frame 4663\n",
+      "Skipped forward 10 seconds to frame 5178\n",
+      "Skipped forward 10 seconds to frame 5690\n",
+      "Skipped forward 10 seconds to frame 6648\n",
+      "Skipped forward 10 seconds to frame 7179\n",
+      "Skipped forward 10 seconds to frame 9258\n",
+      "Skipped forward 10 seconds to frame 9808\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
