added a module in ml utils where there is lap time predictions, mergin to dev

--- a/scripts/IS_agent/N01_agent_setup.ipynb
+++ b/scripts/IS_agent/N01_agent_setup.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,17 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DegradationFact(Fact):\n",
     "    \"\"\"\n",
-    "    Facts about tire degradation\n",
+    "    Facts about tire degradation including future predictions\n",
     "    \"\"\"\n",
-    "    degradation_rate = Field(float, mandatory= False)           # Seconds lost per lap due to degradation\n",
-    "    previous_rates = Field(list, mandatory= False)              # Last N degradation rates for trend analysis\n",
-    "    fuel_adjusted_deg_percent = Field(float, mandatory= False)  # Percentage degradation adjusted for fuel "
+    "    degradation_rate = Field(float, mandatory=False)           # Current seconds lost per lap\n",
+    "    previous_rates = Field(list, mandatory=False)              # Historical degradation rates\n",
+    "    fuel_adjusted_deg_percent = Field(float, mandatory=False)  # Percentage degradation adjusted for fuel\n",
+    "    predicted_rates = Field(list, mandatory=False)             # Array of predicted future degradation rates"
    ]
   },
   {
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,42 +493,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Transforming tire predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform_degradation_prediction(prediction_data, driver_number):\n",
+    "def transform_tire_predictions(predictions_df, driver_number):\n",
     "    \"\"\"\n",
-    "    Transform degradation prediction model output into facts.\n",
+    "    Transform the output from predict_tire_degradation into facts for the rule engine.\n",
     "    \n",
     "    Args:\n",
-    "        prediction_data (dict): Output from the degradation prediction model\n",
+    "        predictions_df (DataFrame): Output from predict_tire_degradation function\n",
     "        driver_number (int): The driver number to extract data for\n",
     "        \n",
     "    Returns:\n",
     "        dict: Dictionary with facts to declare\n",
     "    \"\"\"\n",
     "    # Filter data for the specific driver\n",
-    "    driver_data = prediction_data[prediction_data['DriverNumber'] == driver_number].iloc[-1]\n",
+    "    driver_data = predictions_df[predictions_df['DriverNumber'] == driver_number]\n",
     "    \n",
-    "    # Extract relevant fields\n",
+    "    if driver_data.empty:\n",
+    "        print(f\"Warning: No prediction data found for driver {driver_number}\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Get the most recent stint\n",
+    "    latest_stint = driver_data['Stint'].max()\n",
+    "    stint_data = driver_data[driver_data['Stint'] == latest_stint]\n",
+    "    \n",
+    "    # Group predictions by current tire age (we want the most recent window)\n",
+    "    latest_age = stint_data['CurrentTyreAge'].max()\n",
+    "    latest_data = stint_data[stint_data['CurrentTyreAge'] == latest_age]\n",
+    "    \n",
+    "    # Sort predictions by how far in the future they are\n",
+    "    future_data = latest_data.sort_values('LapsAheadPred')\n",
+    "    \n",
+    "    # Extract future degradation rates\n",
+    "    predicted_rates = future_data['PredictedDegradationRate'].tolist()\n",
+    "    \n",
+    "    # Get basic info about current state\n",
+    "    current_info = future_data.iloc[0]\n",
+    "    \n",
+    "    # Create degradation fact with current and predicted data\n",
     "    degradation_fact = DegradationFact(\n",
-    "        degradation_rate=float(driver_data['DegradationRate']),\n",
-    "        fuel_adjusted_deg_percent=float(driver_data.get('FuelAdjustedDegPercent', 0))\n",
+    "        # Get current degradation - not directly available in predictions\n",
+    "        # Using a placeholder value (could be obtained from elsewhere)\n",
+    "        degradation_rate=0.0,  \n",
+    "        predicted_rates=predicted_rates  # Array of future predictions\n",
     "    )\n",
     "    \n",
-    "    # Get historical rates if available (last 3 laps)\n",
-    "    if len(prediction_data[prediction_data['DriverNumber'] == driver_number]) >= 3:\n",
-    "        historical = prediction_data[prediction_data['DriverNumber'] == driver_number].tail(3)\n",
-    "        degradation_fact['previous_rates'] = historical['DegradationRate'].tolist()\n",
-    "    \n",
+    "    # Create corresponding telemetry fact\n",
     "    telemetry_fact = TelemetryFact(\n",
-    "        tire_age=int(driver_data['TyreAge']),           # Convert to int\n",
-    "        compound_id=int(driver_data['CompoundID']),     # Convert to int\n",
-    "        position=int(driver_data['Position']),          # Convert to int\n",
-    "        driver_number=int(driver_number)                # Convert to int\n",
+    "        tire_age=int(latest_age),\n",
+    "        compound_id=int(current_info['CompoundID']),\n",
+    "        driver_number=int(driver_number),\n",
+    "        # Add position if available\n",
+    "        position=int(current_info.get('Position', 0))\n",
     "    )\n",
+    "    \n",
+    "    # Add current lap time if available\n",
+    "    if 'CurrentLapTime' in current_info:\n",
+    "        telemetry_fact['lap_time'] = float(current_info['CurrentLapTime'])\n",
     "    \n",
     "    return {\n",
     "        'degradation': degradation_fact,\n",
@@ -536,8 +575,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Transforming Lap Times predictions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +625,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_tire_predictions(race_data, models_path, compound_thresholds=None):\n",
+    "    \"\"\"\n",
+    "    Load tire predictions from the prediction module.\n",
+    "    \n",
+    "    Args:\n",
+    "        race_data (DataFrame): Race telemetry data\n",
+    "        models_path (str): Path to the directory containing model files\n",
+    "        compound_thresholds (dict): Dictionary mapping compound IDs to starting lap numbers\n",
+    "                                  (e.g., {1: 6, 2: 12, 3: 25})\n",
+    "                                  \n",
+    "    Returns:\n",
+    "        DataFrame: Tire degradation predictions\n",
+    "    \"\"\"\n",
+    "    # Import the tire prediction module\n",
+    "    import sys\n",
+    "    import os\n",
+    "    # Add parent directory to path if needed\n",
+    "    sys.path.append(os.path.abspath('../'))\n",
+    "    \n",
+    "    # Import the module\n",
+    "    from ML_tyre_pred.ML_utils import N02_model_tire_predictions as tdp\n",
+    "    \n",
+    "    # Default thresholds based on F1 knowledge if none provided\n",
+    "    if compound_thresholds is None:\n",
+    "        compound_thresholds = {\n",
+    "            1: 6,   # Soft tires: monitor from lap 6 onwards\n",
+    "            2: 12,  # Medium tires: monitor from lap 12 onwards\n",
+    "            3: 25   # Hard tires: monitor from lap 25 onwards\n",
+    "        }\n",
+    "    \n",
+    "    # Get predictions\n",
+    "    predictions = tdp.predict_tire_degradation(\n",
+    "        race_data,\n",
+    "        models_path,\n",
+    "        compound_start_laps=compound_thresholds\n",
+    "    )\n",
+    "    \n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_current_degradation(telemetry_data, driver_number):\n",
+    "    \"\"\"\n",
+    "    Extract current degradation rate from telemetry data.\n",
+    "    \n",
+    "    Args:\n",
+    "        telemetry_data (DataFrame): Processed telemetry data with DegradationRate\n",
+    "        driver_number (int): Driver number to get data for\n",
+    "        \n",
+    "    Returns:\n",
+    "        float: Current degradation rate or 0.0 if not available\n",
+    "    \"\"\"\n",
+    "    # Filter for the specific driver\n",
+    "    driver_data = telemetry_data[telemetry_data['DriverNumber'] == driver_number]\n",
+    "    \n",
+    "    if driver_data.empty:\n",
+    "        return 0.0\n",
+    "    \n",
+    "    # Get the most recent lap data\n",
+    "    latest_data = driver_data.sort_values('TyreAge', ascending=False).iloc[0]\n",
+    "    \n",
+    "    # Return degradation rate if available\n",
+    "    return float(latest_data.get('DegradationRate', 0.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Transforming Radio Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,8 +733,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Calculating Race Phase"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,17 +779,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Facts initialized successfully. Rules will be implemented in subsequent notebooks.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an engine instance\n",
     "\n",
